--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "axois": "^0.0.1-security",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
